syntax = "proto2";
package PTP.Common;
option java_package = "chat.wai.protobuf";

option optimize_for = LITE_RUNTIME;

enum ERR{
  NO_ERROR = 0;
  ERR_SYSTEM = 1;
  ERR_AUTH_LOGIN = 2;
  ERR_AUTH_NEED = 3;
}

enum QrCodeType{
  QrCodeType_MNEMONIC = 1;
}

enum AUTH_TYPE{
  AUTH_TYPE_USERNAME = 0;
  AUTH_TYPE_EMAIL = 1;
  AUTH_TYPE_MOBILE = 2;
}

message FileInfo{
  required string id = 1;
  required uint64 size = 2;
  required uint32 part = 3;
  optional uint32 part_total = 4;
  required bytes buf = 5;
  required string type = 6;
}


message PbUsernames {
  required string username = 1;
  optional bool isActive = 2;
  optional bool isEditable = 3;
}

message PbMenuButton {
  required string type = 1;
}

message PbCommands {
  required string botId = 1;
  required string command = 2;
  required string description = 3;
}


message PbBotInfo {
  required string botId = 1;
  optional string description = 2;
  optional bool isChatGpt = 3;
  optional PbMenuButton menuButton = 4;
  repeated PbCommands commands = 5;
  //  photo?: ApiPhoto;
//  gif?: ApiVideo;
}

message PbFullInfo {
  optional string bio = 1;
  optional uint32 commonChatsCount = 2;
  optional bool isBlocked = 3;
  optional bool noVoiceMessages = 4;
  optional PbBotInfo botInfo = 5;
  optional uint32 pinnedMessageId = 6;

//  profilePhoto?: ApiPhoto;
//  fallbackPhoto?: ApiPhoto;
//  personalPhoto?: ApiPhoto;
//  premiumGifts?: ApiPremiumGiftOption[];
}

message PbUser {
  required string id = 1;
  optional string firstName = 2;
  optional string lastName = 13;
  repeated PbUsernames usernames = 3;
  optional bool isMin = 4;
  optional bool isPremium = 5;
  required string type = 6;
  optional bool hasVideoAvatar = 7;
  optional bool canBeInvitedToGroup = 8;
  required string phoneNumber = 9;
  optional bool noStatus = 10;
  optional string accessHash = 11;
  optional PbFullInfo fullInfo = 12;
  optional bool isSelf = 14;
}

message PbSettings {
  optional bool isAutoArchived = 1;
  optional bool canReportSpam = 2;
  optional bool canAddContact = 3;
  optional bool canBlockContact = 4;
}

message PbChat {
  required string id = 2;
  required string type = 1;
  required string title = 3;
  repeated PbUsernames usernames = 4;
  optional bool isMuted = 5;
  optional bool isMin = 6;
  optional bool hasPrivateLink = 7;
  optional bool isSignaturesShown = 8;
  optional string accessHash = 9;
  optional bool isVerified = 10;
  optional bool isJoinToSend = 11;
  optional bool isJoinRequest = 12;
  optional bool isForum = 13;
  optional bool isListed = 14;
  optional PbSettings settings = 15;
  optional PbMsg lastMessage = 16;
}


message PbThumbnail {
  required uint32 width = 1;
  required uint32 height = 2;
  required string dataUri = 3;
}

message PbMessageEntity{
  required string type = 1;
  required uint32 offset = 2;
  required uint32 length = 3;
  optional string documentId = 4;
  optional string userId = 5;
  optional string url = 6;
  optional string language = 7;
  optional string cipher = 8;
  optional string hint = 9;
}

message PbText {
  required string text = 1;
  repeated PbMessageEntity entities = 2;
}

message PbSizes {
  required uint32 width = 1;
  required uint32 height = 2;
  required string type = 3;
}

message PbPhoto {
  required string id = 1;
  optional PbThumbnail thumbnail = 2;
  repeated PbSizes sizes = 3;
  optional bool isSpoiler = 4;
}

message PbVoice {
  required string id = 1;
  repeated uint32 waveform = 2;
  optional uint32 duration = 3;
}

message PbContent {
  optional PbText text = 1;
  optional PbPhoto photo = 2;
  optional PbVoice voice = 3;
}

message PbMsg {
  required uint32 id = 1;
  required string chatId = 2;
  required PbContent content = 3;
  required uint32 date = 4;
  required bool isOutgoing = 5;
  optional string senderId = 6;
  optional bool isForwardingAllowed = 7;
  optional double previousLocalId = 8;
}

message PbChatFolder {
  required uint32 id = 1;
  required string title = 2;
  required bool channels = 3;
  repeated string pinnedChatIds = 4;
  repeated string includedChatIds = 5;
  repeated string excludedChatIds = 6;
}

message PbUserSetting {
  repeated PbChatFolder chatFolders = 1;
  repeated uint32 chatFolderOrderedIds = 2;
  repeated string myBotIds = 3;
  repeated string myGroups = 4;
}

message PbChatGpBotConfig {
  optional string init_system_content = 1;
  optional string api_key = 2;
}

message PbQrCode {
  required QrCodeType type = 1;
  required bytes data = 2;
}
