syntax = "proto2";
package PTP.Other;
import "PTP.Common.proto";
option java_package = "chat.wai.protobuf";

option optimize_for = LITE_RUNTIME;

message OtherNotify{
  required Common.ERR err = 100;
}

